color and background change

--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
 <title> Fed Film 20C </title>
 <style type="text/css">
 	body{
-		background-image:url('doggy.jpeg');
+		background-color: white;
+		background-size: 200pt;
 		color:#FFFFFF;}
-		h1 {font-size:37pt;}
+		h1 {font-size:37pt;
+			color: black;}
+
 		h2 {font-size:25pt;
+			color: black;
 			left:200px;
 			font-family: Helvetica, Arial;
 			text-align: center;
 			text-shadow: 0pt 1pt 0pt rgba(255, 255, 255, 0.3)
 			 }
 		p {font-family: arial;
+			color: black;
 			font-weight: bold;
 			border-style: solid;
 			border-width: 5px;
@@ -24,6 +29,7 @@
 			padding-top: 10px}
 		a {
 			font-family: Helvetica, Arial;
+			color: black;
 		 text-align: center;
 		 text-shadow: -1px 0 black, 0 1px black, 1 px 0 black, 0. -1;
 		 padding-left: 50px;
