hovers and fonts and image

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 		h1 {font-size:37pt;
 			color: black;}
 
-		h2 {font-size:25pt;
-			color: black;
+		h2:hover 
+			{color:#0431B4;
+			}
+		h2{font-size:25pt;
+			color: #27B5FF;
 			left:200px;
 			font-family: Helvetica, Arial;
 			text-align: center;
@@ -27,9 +30,13 @@
 			left: 200px;
 			text-align: center;
 			padding-top: 10px}
+		a:hover{ color: black;
+			font-weight: normal;
+			 }
 		a {
 			font-family: Helvetica, Arial;
-			color: black;
+			color: #848484;
+			
 		 text-align: center;
 		 text-shadow: -1px 0 black, 0 1px black, 1 px 0 black, 0. -1;
 		 padding-left: 50px;
@@ -43,13 +50,18 @@
 	padding-bottom: 0pt;
 	width: 610px;
 	margin: 0 auto;
-	min-height: 100px;
+	min-height: 100px;}
 
-}
-.write
-font-family: Helvetica;
+img:hover {border-color: black;}
+img { position: relative;
+	height:130px;
+	padding-top: 20pt;
+	border:solid 1px #FFFFFF;
+	margin-top: 30px;
+margin-left:45%}
 
 </style>
+
 </head>
 <body>
 <p> Federico Gaytan's Film 20C Assignments </p>
@@ -62,6 +74,7 @@ Film 20C
 <a href="Assignment4.html">Assignment 4</a>
 <a href="Assignment5.html">Assignment 5</a>
 <a href="Assignment6.html">Assignment 6</a>
+<img src="doggy.jpeg" alt="doggy" height="500" align="middle" hspace="20"</img>
 
 <script type="text/javascript">
 
