added margins and crap

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title> Fed Film 20C </title>
+<link type="text/css" rel=:stylesheet: href="tech/style.css" media="screen" /> 
 <style type="text/css">
 	body{
 		background-color: white;
@@ -36,7 +37,7 @@
 		a {
 			font-family: Helvetica, Arial;
 			color: #848484;
-			
+			margin-left: 20%;
 		 text-align: center;
 		 text-shadow: -1px 0 black, 0 1px black, 1 px 0 black, 0. -1;
 		 padding-left: 50px;
@@ -55,10 +56,20 @@
 img:hover {border-color: black;}
 img { position: relative;
 	height:130px;
-	padding-top: 20pt;
-	border:solid 1px #FFFFFF;
+	border:solid 2px #FFFFFF;
 	margin-top: 30px;
 margin-left:45%}
+
+div {color: black;
+background-color: green; opacity: 1.0; 
+margin-top: 10pc}
+.bluebox{
+	width: 500px;
+	background-color: blue; opacity: 1.0;
+	color:black;
+	font-family: Arial, Helvetica;
+
+}
 
 </style>
 
@@ -75,6 +86,22 @@ Film 20C
 <a href="Assignment5.html">Assignment 5</a>
 <a href="Assignment6.html">Assignment 6</a>
 <img src="doggy.jpeg" alt="doggy" height="500" align="middle" hspace="20"</img>
+
+<div class="bluebox"> 
+	<p style="border:1px #848484 solid; font-size:20px;">
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris malesuada augue est, sed ullamcorper enim elementum imperdiet. In venenatis lacus facilisis mauris convallis posuere. Morbi et posuere tellus, eu tincidunt turpis. Nam tristique nulla et tincidunt facilisis. Nunc congue dolor ac sapien auctor, et sodales eros faucibus. Morbi diam metus, ullamcorper non iaculis a, volutpat vitae lacus. Pellentesque egestas, justo sit amet semper gravida, arcu ligula luctus dolor, id sodales leo est id ligula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam eu volutpat massa. Donec id tristique tellus, eget aliquet nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+</div>
+
+
+<div> 
+	<p style="border:1px #848484 solid; font-size:20px;">
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris malesuada augue est, sed ullamcorper enim elementum imperdiet. In venenatis lacus facilisis mauris convallis posuere. Morbi et posuere tellus, eu tincidunt turpis. Nam tristique nulla et tincidunt facilisis. Nunc congue dolor ac sapien auctor, et sodales eros faucibus. Morbi diam metus, ullamcorper non iaculis a, volutpat vitae lacus. Pellentesque egestas, justo sit amet semper gravida, arcu ligula luctus dolor, id sodales leo est id ligula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam eu volutpat massa. Donec id tristique tellus, eget aliquet nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+</div>
+
+<div> 
+	<p style="border:1px #848484 solid; font-size:20px;">
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris malesuada augue est, sed ullamcorper enim elementum imperdiet. In venenatis lacus facilisis mauris convallis posuere. Morbi et posuere tellus, eu tincidunt turpis. Nam tristique nulla et tincidunt facilisis. Nunc congue dolor ac sapien auctor, et sodales eros faucibus. Morbi diam metus, ullamcorper non iaculis a, volutpat vitae lacus. Pellentesque egestas, justo sit amet semper gravida, arcu ligula luctus dolor, id sodales leo est id ligula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam eu volutpat massa. Donec id tristique tellus, eget aliquet nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+</div>
 
 <script type="text/javascript">
 
